--- a/code/CMakeLists.txt
+++ b/code/CMakeLists.txt
@@ -9,4 +9,6 @@ link_directories(${PCL_LIBRARY_DIRS})
 add_definitions(${PCL_DEFINITIONS})
 
 add_executable (cloud_viewer cloud_viewer.cpp)
+add_executable (cloud_viewer_new cloud_viewer_new.cpp)
 target_link_libraries (cloud_viewer ${PCL_LIBRARIES})
+target_link_libraries (cloud_viewer_new ${PCL_LIBRARIES})
